Fix edit page for families

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,6 +7,10 @@
   }
 }
 
+.btn-primary {
+  color: #ffffff;
+}
+
 .btn-primary:hover, .btn-danger:hover {
   background-color: #e53b5c;
   border-color: #e23658;
