Fix edit account page buttons

--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -19,7 +19,7 @@
             <%= link_to "FAQ", "#", class: "nav-link" %>
         </li>
         <li class="nav-item active">
-            <%= link_to 'Sign in', new_user_session_path, class: "btn btn-outline-primary" %>
+            <%= link_to 'Sign in', new_user_session_path, class: "btn .btn-white btn-outline-primary" %>
         </li>
       </ul>
     </div>
