--- a/app/views/devise/registrations/_navbar.html.erb
+++ b/app/views/devise/registrations/_navbar.html.erb
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
+            <%= link_to "Home", dynamic_root_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-            <%= link_to 'Sign in', new_user_session_path, class: "btn btn-outline-primary" %>
+            <%= link_to 'Sign in', new_user_session_path, class: "btn btn-white btn-outline-primary" %>
         </li>
 
       </ul>
