--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,41 +1,33 @@
 <body class="home-page">
-<%= render 'navbar' %>
+  <%= render 'navbar' %>
 
-<div class="container-hero background_img">
-  <div class="row hero-row m-0">
-    <!-- Colonne unique qui occupe 5/12 de la largeur -->
-    <div class="col-md-5 col-hero d-flex flex-column justify-content-center">
+  <div class="container-hero background_img">
+    <div class="row hero-row m-0">
+      <!-- Colonne unique qui occupe 5/12 de la largeur -->
+      <div class="col-md-5 col-hero d-flex flex-column justify-content-center">
 
-      <!-- Row 1 : Titre -->
-      <div class="hero">
-        <p class="hero-text">Find your next au pair or host family, the easy way.</p>
-      </div>
+        <!-- Row 1 : Titre -->
+        <div class="hero">
+          <p class="hero-text">Find your next au pair or host family, the easy way.</p>
+        </div>
 
-      <!-- Row 2 : Liste des fonctionnalités -->
-      <ul class="features-list">
-        <li><i class="fa-regular fa-circle-check" style="color: #FD3967"></i> Explore profiles worldwide and find your perfect match.</li>
-        <li><i class="fa-regular fa-circle-check" style="color: #FD3967"></i> Filter by location, language, and stay duration.</li>
-        <li><i class="fa-regular fa-circle-check" style="color: #FD3967"></i> Match, get in touch, and begin your journey!</li>
-      </ul>
+        <!-- Row 2 : Liste des fonctionnalités -->
+        <ul class="features-list">
+          <li><i class="fa-regular fa-circle-check" style="color: #FD3967"></i> Explore profiles worldwide and find your perfect match.</li>
+          <li><i class="fa-regular fa-circle-check" style="color: #FD3967"></i> Filter by location, language, and stay duration.</li>
+          <li><i class="fa-regular fa-circle-check" style="color: #FD3967"></i> Match, get in touch, and begin your journey!</li>
+        </ul>
 
-      <!-- Row 3 : Boutons CTA alignés sur une même ligne -->
-      <div class="d-flex gap-3 justify-content-start">
-        <%= link_to 'Find your au pair', new_user_registration_path, class: "btn btn-primary btn-small" %>
-        <%= link_to 'Find your host family', new_user_registration_path, class: "btn btn-primary btn-small" %>
-      </div>
+        <!-- Row 3 : Boutons CTA alignés sur une même ligne -->
+        <div class="d-flex gap-3 justify-content-start">
+          <%= link_to 'Find your au pair', new_user_registration_path, class: "btn btn-primary btn-small" %>
+          <%= link_to 'Find your host family', new_user_registration_path, class: "btn btn-primary btn-small" %>
+        </div>
 
-    </div>s
-
-  </div>
-</div>
-
-<div class="footer">
-    <div class="links">
-      <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-      <p>This website was coded with <i class="fas fa-heart"></i> at Le Wagon.</p>
+      </div>s
 
     </div>
   </div>
+
+  <%= render 'footer' %>
 </body>
