--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -2,7 +2,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid"> <!-- Utilisation d'un container-fluid pour occuper toute la largeur -->
     <!-- Logo cliquable avec lien vers la page d'accueil ou autre -->
-    <%= link_to users_path, class: "navbar-brand" do %>
+    <%= link_to dynamic_root_path, class: "navbar-brand" do %>
       <%= image_tag 'amp_logo.png', alt: 'Aupair Match Logo' %>
     <% end %>
 
