--- a/app/views/users/_profile_picture_modal.html.erb
+++ b/app/views/users/_profile_picture_modal.html.erb
@@ -8,25 +8,20 @@
       <div class="modal-body">
         <!-- Affichage de l'image actuelle -->
         <div class="text-center">
-          <%= cl_image_tag(@user.photo.attached? ? @user.photo.key : 'default_avatar.png', width: 300, height: 300, class: "current-profile-photo") %>
+          <%= cl_image_tag(@user.photo.attached? ? @user.photo.key : 'default_avatar.png', width: 300, height: 300, class: "current-profile-photo", data: { profile_picture_target: "currentProfilePhoto" }) %>
         </div>
 
         <!-- Formulaire pour choisir une nouvelle image avec simple_form -->
-        <%= simple_form_for @user, url: update_profile_picture_path(@user), method: :patch, html: { id: "profilePictureForm", class: "profile-picture-form", multipart: true } do |form| %>
+        <%= simple_form_for @user, url: update_profile_picture_path(@user), method: :patch, html: { id: "profilePictureForm", class: "profile-picture-form", multipart: true, data: { profile_picture_target: "profileForm" } } do |form| %>
           <div class="form-group">
-            <%= form.input :photo, as: :file, label: "Choose a file", input_html: { class: "form-control-file", id: "chooseFile", data: { profile_picture_target: "chooseFile" } } %>
+            <%= form.input :photo, as: :file, label: "Choose a file", input_html: { class: "form-control-file", id: "chooseFile", data: { action: "change->profile-picture#chooseFileTargetChanged", profile_picture_target: "chooseFile" } } %>
           </div>
         <% end %>
-
-        <!-- Aperçu de la nouvelle image choisie -->
-        <div id="imagePreview" class="text-center" style="display: none;" data-profile-picture-target="imagePreview">
-          <img id="previewImage" src="" class="current-profile-photo" style="width: 150px; height: 150px; border-radius: 50%;" data-profile-picture-target="previewImage" />
-        </div>
       </div>
       <div class="modal-footer">
         <!-- Boutons -->
         <button type="button" class="btn btn-secondary" id="cancelButton" data-bs-dismiss="modal" data-profile-picture-target="cancelButton">Cancel</button>
-        <button type="button" class="btn btn-primary" id="confirmButton" disabled data-profile-picture-target="confirmButton">Confirm changes</button>
+        <button type="button" class="btn btn-primary" id="confirmButton" disabled data-action="click->profile-picture#submitForm" data-profile-picture-target="confirmButton">Confirm changes</button>
       </div>
     </div>
   </div>
