--- a/app/views/users/_users_list.html.erb
+++ b/app/views/users/_users_list.html.erb
@@ -27,21 +27,21 @@
                 <div data-controller="manage-favorites" data-manage-favorites-id-value="<%= {visiting_user: current_user.id, visited_user: user.id}.to_json %>">
                   <i data-action="click->manage-favorites#toggle_favorite"
                     data-manage-favorites-target="star"
-                    class="fa-star position-icon-favorite fa-solid <%= Favorite.where(favoriting_user_id: current_user.id, favorited_user_id: user.id).empty? ? 'icon-favorite-empty' : 'icon-favorite-added' %>"></i>
+                    class="fa-star icon icon-hover fa-solid <%= Favorite.where(favoriting_user_id: current_user.id, favorited_user_id: user.id).empty? ? 'icon-favorite-empty' : 'icon-favorite-added' %>"></i>
                 </div>
 
                 <div data-controller="manage-matches" data-manage-matches-id-value="<%= {initiated_by: current_user.id, received_by: user.id}.to_json %>" >
                   <i data-action="click->manage-matches#manage_matches"
                     data-manage-matches-target="heart"
                     data-placement="top"
-                    class="fa-solid position-icon-match
-                    <% if Match.where(initiated_by: current_user.id, received_by: user.id).empty? %>
-                      <%= 'fa-heart-circle-plus icon-match-empty' %>
-                    <% elsif Match.where(initiated_by: current_user.id, received_by: user.id).first.status == "pending" %>
+                    class="fa-solid icon
+                    <% if user.empty?(current_user) %>
+                      <%= 'fa-heart-circle-plus icon-match-empty icon-hover' %>
+                    <% elsif user.pending?(current_user) %>
                       <%= 'fa-heart-circle-exclamation icon-match-pending' %>
-                    <% elsif Match.where(initiated_by: current_user.id, received_by: user.id).first.status == "refused" %>
+                    <% elsif user.refused?(current_user) %>
                       <%= 'fa-heart-circle-xmark icon-match-refused' %>
-                    <% elsif Match.where(initiated_by: current_user.id, received_by: user.id).first.status == "accepted" %>
+                    <% elsif user.accepted?(current_user) %>
                       <%= 'fa-heart-circle-check icon-match-accepted' %>
                     <% end %>"></i>
                 </div>
