--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "components/loginpage";
 @import "components/show";
 @import "components/footer";
+@import "components/conversations";
 
 // Mapbox css
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css");
