Add fixed tab bar behavior and add shadow on it

--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -1,5 +1,5 @@
 <!-- Navbar de navigation -->
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar fixed-top navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid"> <!-- Utilisation d'un container-fluid pour occuper toute la largeur -->
     <!-- Logo cliquable avec lien vers la page d'accueil ou autre -->
     <%= link_to dynamic_root_path, class: "navbar-brand" do %>
