--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,10 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+body{
+  padding-top: 70px;
+}
+
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
