--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,8 @@
   background-color: #1B1A20; /* Exemple de couleur de fond pour le footer */
   color: #fff; /* Texte en blanc pour un bon contraste */
   width: 100%; /* Assure que le footer prenne toute la largeur de la page */
+  // position: fixed;
+  // bottom: 0;
 }
 
 .footer a {
