--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -17,4 +17,4 @@
     <p class="lead">You have not added any favorites yet.</p>
 <% end %>
 <!-- Footer -->
-<%= render 'footer' %>
+<%# <%= render 'footer' %>
