--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -17,7 +17,7 @@
         <!-- Menu visible uniquement si l'utilisateur est connecté (remplacer # par les routes appropriées) -->
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "My favorites", "my_favorites", class: "nav-link" %>
+            <%= link_to "My favorites", my_favorites_path, class: "nav-link" %>
           </li>
           <li class="nav-item d-flex position-relative">
             <%= link_to "My matches", matches_path(current_user: current_user), class: "nav-link" %>
